uftrace: add support for UTC offset information
This is a soon to be released feature in uftrace, allows correlation with
lttng kernel traces.

Signed-off-by: Matthew Khouzam <matthew.khouzam@ericsson.com>
Change-Id: I76ee112ba5c407d7e4810df77882c9e11bfaa43d